add copilot suggs, change var A, updated tests, nb

--- a/docs/component_models.ipynb
+++ b/docs/component_models.ipynb
@@ -458,13 +458,13 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])\n",
        "Coordinates:\n",
        "  * y        (y) float64 808B -5.0 -4.9 -4.8 -4.7 -4.6 ... 4.6 4.7 4.8 4.9 5.0\n",
-       "  * x        (x) float64 808B -5.0 -4.9 -4.8 -4.7 -4.6 ... 4.6 4.7 4.8 4.9 5.0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>y</span>: 101</li><li><span class='xr-has-index'>x</span>: 101</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-66c13f8f-846b-4c89-830e-b9eb68227100' class='xr-array-in' type='checkbox' checked><label for='section-66c13f8f-846b-4c89-830e-b9eb68227100' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "  * x        (x) float64 808B -5.0 -4.9 -4.8 -4.7 -4.6 ... 4.6 4.7 4.8 4.9 5.0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>y</span>: 101</li><li><span class='xr-has-index'>x</span>: 101</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-fc2af168-1338-4934-9f76-bb3c2037ba8f' class='xr-array-in' type='checkbox' checked><label for='section-fc2af168-1338-4934-9f76-bb3c2037ba8f' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       ...,\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-4ba0d881-04b8-4a62-945e-2a4e0c8841b5' class='xr-section-summary-in' type='checkbox'  checked><label for='section-4ba0d881-04b8-4a62-945e-2a4e0c8841b5' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-5.0 -4.9 -4.8 -4.7 ... 4.8 4.9 5.0</div><input id='attrs-3e971242-5c45-4f15-94fc-fa3834fec185' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-3e971242-5c45-4f15-94fc-fa3834fec185' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-464dfbe5-042c-4bad-b725-6a945b55ecf0' class='xr-var-data-in' type='checkbox'><label for='data-464dfbe5-042c-4bad-b725-6a945b55ecf0' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-5. , -4.9, -4.8, -4.7, -4.6, -4.5, -4.4, -4.3, -4.2, -4.1, -4. , -3.9,\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-d71fc36e-0f56-41fb-9147-de8ccecb0c8d' class='xr-section-summary-in' type='checkbox'  checked><label for='section-d71fc36e-0f56-41fb-9147-de8ccecb0c8d' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-5.0 -4.9 -4.8 -4.7 ... 4.8 4.9 5.0</div><input id='attrs-d93f7f0f-5ca3-44ed-81b4-9e49d9b4aa43' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-d93f7f0f-5ca3-44ed-81b4-9e49d9b4aa43' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-ff1af749-bd95-491a-8116-abb9b4b9546f' class='xr-var-data-in' type='checkbox'><label for='data-ff1af749-bd95-491a-8116-abb9b4b9546f' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-5. , -4.9, -4.8, -4.7, -4.6, -4.5, -4.4, -4.3, -4.2, -4.1, -4. , -3.9,\n",
        "       -3.8, -3.7, -3.6, -3.5, -3.4, -3.3, -3.2, -3.1, -3. , -2.9, -2.8, -2.7,\n",
        "       -2.6, -2.5, -2.4, -2.3, -2.2, -2.1, -2. , -1.9, -1.8, -1.7, -1.6, -1.5,\n",
        "       -1.4, -1.3, -1.2, -1.1, -1. , -0.9, -0.8, -0.7, -0.6, -0.5, -0.4, -0.3,\n",
@@ -472,7 +472,7 @@
        "        1. ,  1.1,  1.2,  1.3,  1.4,  1.5,  1.6,  1.7,  1.8,  1.9,  2. ,  2.1,\n",
        "        2.2,  2.3,  2.4,  2.5,  2.6,  2.7,  2.8,  2.9,  3. ,  3.1,  3.2,  3.3,\n",
        "        3.4,  3.5,  3.6,  3.7,  3.8,  3.9,  4. ,  4.1,  4.2,  4.3,  4.4,  4.5,\n",
-       "        4.6,  4.7,  4.8,  4.9,  5. ])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-5.0 -4.9 -4.8 -4.7 ... 4.8 4.9 5.0</div><input id='attrs-fcbb3a76-59b9-40bb-ac69-154b975ff236' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-fcbb3a76-59b9-40bb-ac69-154b975ff236' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a1353897-5e85-47e5-be33-6836df9582a6' class='xr-var-data-in' type='checkbox'><label for='data-a1353897-5e85-47e5-be33-6836df9582a6' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-5. , -4.9, -4.8, -4.7, -4.6, -4.5, -4.4, -4.3, -4.2, -4.1, -4. , -3.9,\n",
+       "        4.6,  4.7,  4.8,  4.9,  5. ])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-5.0 -4.9 -4.8 -4.7 ... 4.8 4.9 5.0</div><input id='attrs-3dc3f413-99a8-4d08-aa84-5bd6a50a2376' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-3dc3f413-99a8-4d08-aa84-5bd6a50a2376' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-968ce236-eb0b-4596-8e57-223be5453081' class='xr-var-data-in' type='checkbox'><label for='data-968ce236-eb0b-4596-8e57-223be5453081' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-5. , -4.9, -4.8, -4.7, -4.6, -4.5, -4.4, -4.3, -4.2, -4.1, -4. , -3.9,\n",
        "       -3.8, -3.7, -3.6, -3.5, -3.4, -3.3, -3.2, -3.1, -3. , -2.9, -2.8, -2.7,\n",
        "       -2.6, -2.5, -2.4, -2.3, -2.2, -2.1, -2. , -1.9, -1.8, -1.7, -1.6, -1.5,\n",
        "       -1.4, -1.3, -1.2, -1.1, -1. , -0.9, -0.8, -0.7, -0.6, -0.5, -0.4, -0.3,\n",
@@ -480,7 +480,7 @@
        "        1. ,  1.1,  1.2,  1.3,  1.4,  1.5,  1.6,  1.7,  1.8,  1.9,  2. ,  2.1,\n",
        "        2.2,  2.3,  2.4,  2.5,  2.6,  2.7,  2.8,  2.9,  3. ,  3.1,  3.2,  3.3,\n",
        "        3.4,  3.5,  3.6,  3.7,  3.8,  3.9,  4. ,  4.1,  4.2,  4.3,  4.4,  4.5,\n",
-       "        4.6,  4.7,  4.8,  4.9,  5. ])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-627fd958-8a7f-49ad-a6b1-71441afc6fef' class='xr-section-summary-in' type='checkbox'  ><label for='section-627fd958-8a7f-49ad-a6b1-71441afc6fef' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>y</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-e6c25c81-5f9a-4773-8e6e-57b1b2496b7a' class='xr-index-data-in' type='checkbox'/><label for='index-e6c25c81-5f9a-4773-8e6e-57b1b2496b7a' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([             -5.0,              -4.9,              -4.8,\n",
+       "        4.6,  4.7,  4.8,  4.9,  5. ])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-54ee36d2-8819-4dac-ae36-8d211704b584' class='xr-section-summary-in' type='checkbox'  ><label for='section-54ee36d2-8819-4dac-ae36-8d211704b584' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>y</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-75ea2382-4965-4772-9922-b5accdc4f178' class='xr-index-data-in' type='checkbox'/><label for='index-75ea2382-4965-4772-9922-b5accdc4f178' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([             -5.0,              -4.9,              -4.8,\n",
        "                    -4.7,              -4.6,              -4.5,\n",
        "                    -4.4,              -4.3,              -4.2,\n",
        "                    -4.1,\n",
@@ -489,7 +489,7 @@
        "                     4.4,               4.5, 4.600000000000001,\n",
        "       4.700000000000001, 4.800000000000001,               4.9,\n",
        "                     5.0],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;y&#x27;, length=101))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>x</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-bd3a4a84-ed1c-4779-8eb5-05c3fde0ba89' class='xr-index-data-in' type='checkbox'/><label for='index-bd3a4a84-ed1c-4779-8eb5-05c3fde0ba89' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([             -5.0,              -4.9,              -4.8,\n",
+       "      dtype=&#x27;float64&#x27;, name=&#x27;y&#x27;, length=101))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>x</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-b197231d-41fa-4e7e-ad03-0833a4e36981' class='xr-index-data-in' type='checkbox'/><label for='index-b197231d-41fa-4e7e-ad03-0833a4e36981' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([             -5.0,              -4.9,              -4.8,\n",
        "                    -4.7,              -4.6,              -4.5,\n",
        "                    -4.4,              -4.3,              -4.2,\n",
        "                    -4.1,\n",
@@ -498,7 +498,7 @@
        "                     4.4,               4.5, 4.600000000000001,\n",
        "       4.700000000000001, 4.800000000000001,               4.9,\n",
        "                     5.0],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;x&#x27;, length=101))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-21f56708-b4e4-453e-a9cb-88c318047727' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-21f56708-b4e4-453e-a9cb-88c318047727' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "      dtype=&#x27;float64&#x27;, name=&#x27;x&#x27;, length=101))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-19b4aa68-8256-40a1-8e67-a09b28808dda' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-19b4aa68-8256-40a1-8e67-a09b28808dda' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray (y: 101, x: 101)> Size: 82kB\n",
@@ -535,17 +535,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6c3ea751-1683-4851-8788-a411ef59a8dc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x734a5640b170>"
+       "<matplotlib.collections.QuadMesh at 0x783622220da0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -563,13 +563,13 @@
    "source": [
     "# a, b semi-majr, semi-minor, theta - angle between positive x axis and a, measured toward positive y,\n",
     "# x0, y0, center coordinates, A value inside the disk.\n",
-    "disk = make_disk(base, a=3.0, b=1.5, theta=np.deg2rad(30), x0=1.0, y0=-2.0, A=2.0)\n",
+    "disk = make_disk(base, a=3.0, b=1.5, theta=np.deg2rad(30), x0=1.0, y0=-2.0, height=2.0)\n",
     "disk.plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "528300ac-3970-48a3-b16d-e7f0d1b510cf",
    "metadata": {},
    "outputs": [],
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "96dda010-cb84-44a9-aaa7-6b70a4b2039c",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,10 @@
     }
    ],
    "source": [
-    "disk_flipped = make_disk(base_flipped, a=3.0, b=1.5, theta=np.deg2rad(30), x0=1.0, y0=-2.0, A=2.0)\n",
+    "disk_flipped = make_disk(\n",
+    "    base_flipped, a=3.0, b=1.5, theta=np.deg2rad(30),\n",
+    "    x0=1.0, y0=-2.0, height=2.0\n",
+    ")\n",
     "qm = disk_flipped.plot()\n",
     "# by default, matplotlib plots x increasing to left, even if coords\n",
     "# are reversed, so for plots, have to invert axis after plotting\n",
@@ -617,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "0c0b0700-e941-4b6c-8113-39770e971515",
    "metadata": {},
    "outputs": [
@@ -635,7 +638,7 @@
    "source": [
     "disk_flipped_normal_math = make_disk(\n",
     "    base_flipped, a=3.0, b=1.5, theta=np.deg2rad(30),\n",
-    "    x0=1.0, y0=-2.0, A=2.0, angle=\"math\"\n",
+    "    x0=1.0, y0=-2.0, height=2.0, angle=\"math\"\n",
     ")\n",
     "qm = disk_flipped_normal_math.plot()\n",
     "qm.axes.invert_xaxis()"
@@ -652,17 +655,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "fcb7ae3c-d4f3-49ce-a257-210e21df6acc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x734a533a8c50>"
+       "<matplotlib.collections.QuadMesh at 0x78361fd645f0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -680,7 +683,7 @@
    "source": [
     "disk_rh_pa = make_disk(\n",
     "    base, a=3.0, b=1.5, theta=np.deg2rad(30), x0=1.0,\n",
-    "    y0=-2.0, A=2.0, angle=\"pa\"\n",
+    "    y0=-2.0, height=2.0, angle=\"pa\"\n",
     ")\n",
     "disk_rh_pa.plot()"
    ]
@@ -697,17 +700,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "35be2b4d-4f34-49bd-81fc-0d834f6e5341",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x734a560ff5f0>"
+       "<matplotlib.collections.QuadMesh at 0x78361fc37f80>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -723,7 +726,10 @@
     }
    ],
    "source": [
-    "gauss2d = make_gauss2d(base, a=3.0, b=1.5, theta=np.deg2rad(30), x0=1.0, y0=-2.0, A=2.0)\n",
+    "gauss2d = make_gauss2d(\n",
+    "    base, a=3.0, b=1.5, theta=np.deg2rad(30),\n",
+    "    x0=1.0, y0=-2.0, peak=2.0\n",
+    ")\n",
     "gauss2d.plot()"
    ]
   },
@@ -737,17 +743,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "id": "2a242997-bcdc-49c4-98a6-37d09b4d6318",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x74d1c36cfec0>"
+       "<matplotlib.collections.QuadMesh at 0x7836220bfe00>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
