Remove split version of dataset.

--- a/docs/astroviper_tutorial_spectral_moment.ipynb
+++ b/docs/astroviper_tutorial_spectral_moment.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4aba9226-856e-40a8-8201-a1806e9daf77",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
     }
    ],
    "source": [
-    "ps_store = \"Antennae_North.cal.lsrk.split.ps.zarr\"\n",
+    "ps_store = \"Antennae_North.cal.lsrk.ps.zarr\"\n",
     "\n",
     "from xradio.measurement_set import open_processing_set\n",
     "\n",
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d25df564-7d60-44d5-b1d3-0b254ec0848d",
    "metadata": {},
    "outputs": [
@@ -1002,8 +1002,6 @@
     "from toolviper.utils.display import dict_to_html\n",
     "from IPython.display import HTML, display\n",
     "\n",
-    "\n",
-    "#ps_store = \"Antennae_North.cal.lsrk.split.py39.v3.vis.zarr\"\n",
     "ps_store = \"Antennae_North.cal.lsrk.ps.zarr\"\n",
     "intents = [\"OBSERVE_TARGET#ON_SOURCE\"]\n",
     "ps = open_processing_set(ps_store, intents=intents)\n",
