--- a/docs/component_models.ipynb
+++ b/docs/component_models.ipynb
@@ -430,13 +430,13 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])\n",
        "Coordinates:\n",
        "  * y        (y) float64 808B -5.0 -4.9 -4.8 -4.7 -4.6 ... 4.6 4.7 4.8 4.9 5.0\n",
-       "  * x        (x) float64 808B -5.0 -4.9 -4.8 -4.7 -4.6 ... 4.6 4.7 4.8 4.9 5.0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>y</span>: 101</li><li><span class='xr-has-index'>x</span>: 101</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-64955e0c-774b-4989-ac6d-88e98f5bd1ec' class='xr-array-in' type='checkbox' checked><label for='section-64955e0c-774b-4989-ac6d-88e98f5bd1ec' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "  * x        (x) float64 808B -5.0 -4.9 -4.8 -4.7 -4.6 ... 4.6 4.7 4.8 4.9 5.0</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span class='xr-has-index'>y</span>: 101</li><li><span class='xr-has-index'>x</span>: 101</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-d20e5197-6b4f-4750-825f-d147862c0f3e' class='xr-array-in' type='checkbox' checked><label for='section-d20e5197-6b4f-4750-825f-d147862c0f3e' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([[0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       ...,\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
        "       [0., 0., 0., ..., 0., 0., 0.],\n",
-       "       [0., 0., 0., ..., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-f003cbb0-3d84-474a-b422-3077976b1afd' class='xr-section-summary-in' type='checkbox'  checked><label for='section-f003cbb0-3d84-474a-b422-3077976b1afd' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-5.0 -4.9 -4.8 -4.7 ... 4.8 4.9 5.0</div><input id='attrs-ac1a39a1-6d77-4d91-9e7a-eca2740596f6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-ac1a39a1-6d77-4d91-9e7a-eca2740596f6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-19648d09-af72-4120-aa67-abe377a418e1' class='xr-var-data-in' type='checkbox'><label for='data-19648d09-af72-4120-aa67-abe377a418e1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-5. , -4.9, -4.8, -4.7, -4.6, -4.5, -4.4, -4.3, -4.2, -4.1, -4. , -3.9,\n",
+       "       [0., 0., 0., ..., 0., 0., 0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-93a54da7-d18b-4e84-8e52-6cb679f51a1c' class='xr-section-summary-in' type='checkbox'  checked><label for='section-93a54da7-d18b-4e84-8e52-6cb679f51a1c' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-5.0 -4.9 -4.8 -4.7 ... 4.8 4.9 5.0</div><input id='attrs-5b547afa-56f0-41ca-9f53-ef87680274c4' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-5b547afa-56f0-41ca-9f53-ef87680274c4' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-6f6cb3d8-b17a-46da-8db1-ee5c3fe724db' class='xr-var-data-in' type='checkbox'><label for='data-6f6cb3d8-b17a-46da-8db1-ee5c3fe724db' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-5. , -4.9, -4.8, -4.7, -4.6, -4.5, -4.4, -4.3, -4.2, -4.1, -4. , -3.9,\n",
        "       -3.8, -3.7, -3.6, -3.5, -3.4, -3.3, -3.2, -3.1, -3. , -2.9, -2.8, -2.7,\n",
        "       -2.6, -2.5, -2.4, -2.3, -2.2, -2.1, -2. , -1.9, -1.8, -1.7, -1.6, -1.5,\n",
        "       -1.4, -1.3, -1.2, -1.1, -1. , -0.9, -0.8, -0.7, -0.6, -0.5, -0.4, -0.3,\n",
@@ -444,7 +444,7 @@
        "        1. ,  1.1,  1.2,  1.3,  1.4,  1.5,  1.6,  1.7,  1.8,  1.9,  2. ,  2.1,\n",
        "        2.2,  2.3,  2.4,  2.5,  2.6,  2.7,  2.8,  2.9,  3. ,  3.1,  3.2,  3.3,\n",
        "        3.4,  3.5,  3.6,  3.7,  3.8,  3.9,  4. ,  4.1,  4.2,  4.3,  4.4,  4.5,\n",
-       "        4.6,  4.7,  4.8,  4.9,  5. ])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-5.0 -4.9 -4.8 -4.7 ... 4.8 4.9 5.0</div><input id='attrs-75deb966-4954-4e18-9ed4-fcee1a14f958' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-75deb966-4954-4e18-9ed4-fcee1a14f958' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-d0fe7b1f-df66-4104-91e6-c5b55be09151' class='xr-var-data-in' type='checkbox'><label for='data-d0fe7b1f-df66-4104-91e6-c5b55be09151' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-5. , -4.9, -4.8, -4.7, -4.6, -4.5, -4.4, -4.3, -4.2, -4.1, -4. , -3.9,\n",
+       "        4.6,  4.7,  4.8,  4.9,  5. ])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-5.0 -4.9 -4.8 -4.7 ... 4.8 4.9 5.0</div><input id='attrs-428c8536-c4ac-4350-bed1-b9b361422467' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-428c8536-c4ac-4350-bed1-b9b361422467' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-1c5b1483-4022-4e4c-992d-48c57b29306e' class='xr-var-data-in' type='checkbox'><label for='data-1c5b1483-4022-4e4c-992d-48c57b29306e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-5. , -4.9, -4.8, -4.7, -4.6, -4.5, -4.4, -4.3, -4.2, -4.1, -4. , -3.9,\n",
        "       -3.8, -3.7, -3.6, -3.5, -3.4, -3.3, -3.2, -3.1, -3. , -2.9, -2.8, -2.7,\n",
        "       -2.6, -2.5, -2.4, -2.3, -2.2, -2.1, -2. , -1.9, -1.8, -1.7, -1.6, -1.5,\n",
        "       -1.4, -1.3, -1.2, -1.1, -1. , -0.9, -0.8, -0.7, -0.6, -0.5, -0.4, -0.3,\n",
@@ -452,7 +452,7 @@
        "        1. ,  1.1,  1.2,  1.3,  1.4,  1.5,  1.6,  1.7,  1.8,  1.9,  2. ,  2.1,\n",
        "        2.2,  2.3,  2.4,  2.5,  2.6,  2.7,  2.8,  2.9,  3. ,  3.1,  3.2,  3.3,\n",
        "        3.4,  3.5,  3.6,  3.7,  3.8,  3.9,  4. ,  4.1,  4.2,  4.3,  4.4,  4.5,\n",
-       "        4.6,  4.7,  4.8,  4.9,  5. ])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-78d71d91-5c43-4df6-9c7e-26973944d6ea' class='xr-section-summary-in' type='checkbox'  ><label for='section-78d71d91-5c43-4df6-9c7e-26973944d6ea' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>y</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-dace8625-9529-427b-82c2-e41e64b35218' class='xr-index-data-in' type='checkbox'/><label for='index-dace8625-9529-427b-82c2-e41e64b35218' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([             -5.0,              -4.9,              -4.8,\n",
+       "        4.6,  4.7,  4.8,  4.9,  5. ])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-5c3daaf8-db8d-405c-bfd5-f3a31414ebc2' class='xr-section-summary-in' type='checkbox'  ><label for='section-5c3daaf8-db8d-405c-bfd5-f3a31414ebc2' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>y</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-cadb713e-eb65-4e19-bac6-3567141bbe54' class='xr-index-data-in' type='checkbox'/><label for='index-cadb713e-eb65-4e19-bac6-3567141bbe54' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([             -5.0,              -4.9,              -4.8,\n",
        "                    -4.7,              -4.6,              -4.5,\n",
        "                    -4.4,              -4.3,              -4.2,\n",
        "                    -4.1,\n",
@@ -461,7 +461,7 @@
        "                     4.4,               4.5, 4.600000000000001,\n",
        "       4.700000000000001, 4.800000000000001,               4.9,\n",
        "                     5.0],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;y&#x27;, length=101))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>x</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-294bb2c9-fdd3-40fe-9de4-43bffe0a2e68' class='xr-index-data-in' type='checkbox'/><label for='index-294bb2c9-fdd3-40fe-9de4-43bffe0a2e68' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([             -5.0,              -4.9,              -4.8,\n",
+       "      dtype=&#x27;float64&#x27;, name=&#x27;y&#x27;, length=101))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>x</div></div><div class='xr-index-preview'>PandasIndex</div><input type='checkbox' disabled/><label></label><input id='index-28073002-a458-46db-8088-60f370f25bff' class='xr-index-data-in' type='checkbox'/><label for='index-28073002-a458-46db-8088-60f370f25bff' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([             -5.0,              -4.9,              -4.8,\n",
        "                    -4.7,              -4.6,              -4.5,\n",
        "                    -4.4,              -4.3,              -4.2,\n",
        "                    -4.1,\n",
@@ -470,7 +470,7 @@
        "                     4.4,               4.5, 4.600000000000001,\n",
        "       4.700000000000001, 4.800000000000001,               4.9,\n",
        "                     5.0],\n",
-       "      dtype=&#x27;float64&#x27;, name=&#x27;x&#x27;, length=101))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-ee3511c2-c443-4392-af33-877bebc74f05' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-ee3511c2-c443-4392-af33-877bebc74f05' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "      dtype=&#x27;float64&#x27;, name=&#x27;x&#x27;, length=101))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-25b7a8ef-e0ce-451d-a020-741f903b7b48' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-25b7a8ef-e0ce-451d-a020-741f903b7b48' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray (y: 101, x: 101)> Size: 82kB\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "6c3ea751-1683-4851-8788-a411ef59a8dc",
    "metadata": {},
    "outputs": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "ede10744-f3a2-406a-8ab5-226dfa9f5b08",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "528300ac-3970-48a3-b16d-e7f0d1b510cf",
    "metadata": {},
    "outputs": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "e7a1bab6-5e90-4e8c-ac96-c5232a318a65",
    "metadata": {},
    "outputs": [
@@ -655,12 +655,12 @@
     "\n",
     "+ **a**: FWHM of major axis\n",
     "+ **b**: FWHM of minor axis\n",
-    "+ **peak**: peak value of the gaussian (analogous to **height** for make_disk)"
+    "+ **peak**: peak value of the gaussian (analogous to **height** for **make_disk()**)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "35be2b4d-4f34-49bd-81fc-0d834f6e5341",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "6ec4bcd8-9aec-4084-97d6-1378bc5dcdb0",
    "metadata": {},
    "outputs": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "2f9b86b9-c0dd-49de-b12a-e33325b5cc70",
    "metadata": {},
    "outputs": [
@@ -760,17 +760,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "2a242997-bcdc-49c4-98a6-37d09b4d6318",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7836220bfe00>"
+       "<matplotlib.collections.QuadMesh at 0x709b9a15fb30>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -791,9 +791,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd28caa1-3616-4127-ae9c-833b408537ae",
+   "metadata": {},
+   "source": [
+    "# TODO Demonstrate behavior options if specified points are outside the grid"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e49d3a73-94ed-4d0f-9af3-14a1b6cd02ef",
+   "id": "ec0c183b-715a-4740-b6d2-658db1a420f0",
    "metadata": {},
    "outputs": [],
    "source": []
