--- a/docs/msv4_spectral_frame_conversion_demo_comparison.ipynb
+++ b/docs/msv4_spectral_frame_conversion_demo_comparison.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import sys\n",
     "sys.path.append('../src/')\n",
-    "from astroviper._domain._visibility._ms_spectral_frame_conversion import _ms_spectral_frame_conversion\n",
+    "from astroviper.core.visibility_manipulation.ms_spectral_frame_conversion import ms_spectral_frame_conversion\n",
     "import xradio\n",
     "from xradio.measurement_set import open_processing_set\n",
     "from astropy.time import Time\n",
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[38;2;128;05;128m2025-08-18 15:36:14,166\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
+      "[\u001b[38;2;128;05;128m2025-08-21 16:06:50,892\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
      ]
     },
     {
@@ -79,13 +79,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[38;2;128;05;128m2025-08-18 15:36:14,169\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m File exists: Antennae_fld1_topo.ps.zarr \n"
+      "[\u001b[38;2;128;05;128m2025-08-21 16:06:50,895\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m File exists: Antennae_fld1_topo.ps.zarr \n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "081cc58c1c3f43ff866c9ed460b3975e",
+       "model_id": "037d8adfda5f43dba1871d5474ba5fb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[38;2;128;05;128m2025-08-18 15:36:14,171\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
+      "[\u001b[38;2;128;05;128m2025-08-21 16:06:50,898\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
      ]
     },
     {
@@ -138,13 +138,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[38;2;128;05;128m2025-08-18 15:36:14,172\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m File exists: Antennae_fld1_casa_lsrk.ps.zarr \n"
+      "[\u001b[38;2;128;05;128m2025-08-21 16:06:50,899\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m File exists: Antennae_fld1_casa_lsrk.ps.zarr \n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2493addeae744563a890b3ec9eb0094c",
+       "model_id": "1bf4478915a4417b827fb181c08c48a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lsrkms = _ms_spectral_frame_conversion(origms)\n",
+    "lsrkms = ms_spectral_frame_conversion(origms)\n",
     "finalfreq = lsrkms.frequency.data"
    ]
   },
@@ -374,7 +374,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1797a0d70>"
+       "<matplotlib.legend.Legend at 0x3032d01a0>"
       ]
      },
      "execution_count": 9,
