--- a/docs/msv4_spectral_frame_conversion_demo_comparison.ipynb
+++ b/docs/msv4_spectral_frame_conversion_demo_comparison.ipynb
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[38;2;128;05;128m2025-08-21 16:06:50,892\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
+      "[\u001b[38;2;128;05;128m2025-08-21 18:15:19,387\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
      ]
     },
     {
@@ -76,16 +76,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[38;2;128;05;128m2025-08-21 16:06:50,895\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m File exists: Antennae_fld1_topo.ps.zarr \n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "037d8adfda5f43dba1871d5474ba5fb3",
+       "model_id": "cca5db9324d74770bfa1d49c7bb525f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[38;2;128;05;128m2025-08-21 16:06:50,898\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
+      "[\u001b[38;2;128;05;128m2025-08-21 18:15:20,010\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
      ]
     },
     {
@@ -135,16 +128,9 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\u001b[38;2;128;05;128m2025-08-21 16:06:50,899\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m File exists: Antennae_fld1_casa_lsrk.ps.zarr \n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bf4478915a4417b827fb181c08c48a9",
+       "model_id": "58a91c247e674275af8c82806b2d0741",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,7 +360,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x3032d01a0>"
+       "<matplotlib.legend.Legend at 0x328a3d010>"
       ]
      },
      "execution_count": 9,
