clarification of theta PA vs math

--- a/docs/component_models.ipynb
+++ b/docs/component_models.ipynb
@@ -652,6 +652,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a015f92-ebe4-4c76-b94b-510bc21ecc14",
+   "metadata": {},
+   "source": [
+    "When the coordinate system is left handed, which is common in astronomy, **theta** is interpreted\n",
+    "by default as the position angle, measured from +y -> +x. For right handed systems, **theta** interpreted\n",
+    "in the normal mathematical way by default. Control over how **theta** is interpreted is specified by\n",
+    "the **angle** parameter which has allowed values of \"math\" 9normal interpretation for right handed systems)\n",
+    "and \"pa\" (normal interpretation for astronomical left-handed systems). Thus, in the cell below, **theta**\n",
+    "is interpreted as PA."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "96dda010-cb84-44a9-aaa7-6b70a4b2039c",
@@ -686,9 +699,7 @@
    "id": "214b32d8-c450-4f73-ad05-c60560079dd4",
    "metadata": {},
    "source": [
-    "But what happened? In the first image, the input angle was measured from +x -> +y. In the second it looks like it was measured from +y -> +x. And indeed that is what's happend. By default, in right handed cooredinate systems, the input angle is measured +x -> +y. The way 99% of the world does it. But, astronomers are different. They think of this angle as a position angle measred from north -> east (+y -> +x) in their left handed coordinate system. So just for them, by default, that's how the angle is interpreted if the coord system is left handed.\n",
-    "\n",
-    "But we can force it to be measured from +x -> +y"
+    "Here we force it to be interpreted as being measured from +x -> +y"
    ]
   },
   {
@@ -845,11 +856,29 @@
     "pt_srcs= make_pt_sources(base, amplitudes=[5, 3], xs=[-0.1, 1.4], ys=[0.2, -0.9])\n",
     "pt_srcs.plot()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15cb9889-8ca4-4c18-b0e8-a8548b7b03f9",
+   "metadata": {},
+   "source": [
+    "### TODO\n",
+    "\n",
+    "Demo more functionality of point source collection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe104964-cf3e-478a-8c37-9bc5b3177246",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "zinc",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -863,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
