--- a/docs/component_models.ipynb
+++ b/docs/component_models.ipynb
@@ -659,7 +659,7 @@
     "When the coordinate system is left handed, which is common in astronomy, **theta** is interpreted\n",
     "by default as the position angle, measured from +y -> +x. For right handed systems, **theta** interpreted\n",
     "in the normal mathematical way by default. Control over how **theta** is interpreted is specified by\n",
-    "the **angle** parameter which has allowed values of \"math\" 9normal interpretation for right handed systems)\n",
+    "the **angle** parameter which has allowed values of \"math\" normal interpretation for right handed systems)\n",
     "and \"pa\" (normal interpretation for astronomical left-handed systems). Thus, in the cell below, **theta**\n",
     "is interpreted as PA."
    ]
