--- a/docs/image_selection.ipynb
+++ b/docs/image_selection.ipynb
@@ -1138,10 +1138,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "id": "4c6a3a58-fe68-4944-8d68-c2a4efa27fa8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.DataArray (y: 200, x: 200)> Size: 40kB\n",
+      "array([[False, False, False, ..., False, False, False],\n",
+      "       [False, False, False, ..., False, False, False],\n",
+      "       [False, False, False, ..., False, False, False],\n",
+      "       ...,\n",
+      "       [False, False, False, ..., False, False, False],\n",
+      "       [False, False, False, ..., False, False, False],\n",
+      "       [False, False, False, ..., False, False, False]])\n",
+      "Coordinates:\n",
+      "  * x        (x) int64 2kB 1 2 3 4 5 6 7 8 9 ... 193 194 195 196 197 198 199 200\n",
+      "  * y        (y) int64 2kB 1 2 3 4 5 6 7 8 9 ... 193 194 195 196 197 198 199 200\n"
+     ]
+    }
+   ],
    "source": [
     "mask_file_bt = select_mask(da, select=f\"`{crtf_path.as_posix()}`\")\n",
     "mask_file_p = select_mask(da, select=crtf_path)\n",
@@ -1264,14 +1282,6 @@
     "ax.set_title(\"apply_select result (NaN outside mask)\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7b7f37a-96b5-41e5-ae3c-fed859e5c287",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
