Fix weighting to work for dual pol.

--- a/docs/msv4_spectral_frame_conversion_demo_comparison.ipynb
+++ b/docs/msv4_spectral_frame_conversion_demo_comparison.ipynb
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[38;2;128;05;128m2025-08-21 18:15:19,387\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
+      "[\u001b[38;2;128;05;128m2025-09-02 11:42:51,720\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
      ]
     },
     {
@@ -76,9 +76,16 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\u001b[38;2;128;05;128m2025-09-02 11:42:51,740\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m File exists: Antennae_fld1_topo.ps.zarr \n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cca5db9324d74770bfa1d49c7bb525f4",
+       "model_id": "3aa8cfb73404460199a64ebd93697ce5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[38;2;128;05;128m2025-08-21 18:15:20,010\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
+      "[\u001b[38;2;128;05;128m2025-09-02 11:42:51,756\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
      ]
     },
     {
@@ -128,9 +135,16 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\u001b[38;2;128;05;128m2025-09-02 11:42:51,760\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m File exists: Antennae_fld1_casa_lsrk.ps.zarr \n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58a91c247e674275af8c82806b2d0741",
+       "model_id": "070c2ae35b5443268ef0d17926fae19d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "becafd02-3ef5-4967-9a96-77cb6f9bc58e",
    "metadata": {},
    "outputs": [],
@@ -360,7 +374,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x328a3d010>"
+       "<matplotlib.legend.Legend at 0x177b078c0>"
       ]
      },
      "execution_count": 9,
