Fix briggs imaging weights notebook.

--- a/docs/core_tutorials/notebook_template.ipynb
+++ b/docs/core_tutorials/notebook_template.ipynb
@@ -13,11 +13,11 @@
     "**For the link url the formatting should be:**\n",
     "https://colab.research.google.com/github/casangi/astroviper/blob/main/docs/path_to_notebook\n",
     "\n",
-    "Description of notebook\n",
+    "\\<Description of notebook\\>\n",
     "\n",
     "---\n",
     "\n",
-    "## \\<Any Introductory Material\\>\n",
+    "## \\<Assumptions and Background\\>\n",
     "\n",
     "**For example:** \n",
     "\n",
@@ -36,12 +36,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Pseudo Code\n",
+    "## Pseudo Code (Optional)\n",
     "\n",
     "**For example:**\n",
     "\n",
-    "ps_xdt Processing Set Data Tree\n",
-    "ms_xdt Measurement Set v4 Data Tree\n",
+    "- ps_xdt Processing Set Data Tree\n",
+    "- ms_xdt Measurement Set v4 Data Tree\n",
     "```\n",
     "core/imaging/calculate_imaging_weights(ps_xdt)\n",
     "    for ms_xdt in ps_xdt\n",
@@ -327,6 +327,26 @@
     "update()\n",
     "#download(file=\"twhya_selfcal_11chans_lsrk_robust_0.5_niter_0.psf\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b32a0d24",
+   "metadata": {},
+   "source": [
+    "# Check List\n",
+    "\n",
+    "Not a section.\n",
+    "\n",
+    "- Does notebook run on Colab\n",
+    "- All relevant sections filled in\n",
+    "- Proofread\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f5ef6e3",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
