Fix hogbom clean ipynb
Added a plot of the original image prior to deconvolution, after feedback at the sprint review.

--- a/docs/hogbom_clean.ipynb
+++ b/docs/hogbom_clean.ipynb
@@ -191,6 +191,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a6046653-d402-4082-8f62-ea810d4412d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img0 = hv.Image(np.squeeze(resid_xds['SKY'].values)).opts(tools=['hover'], title='Original Dirty Image',\n",
+    "                                                             width=500, height=500, colorbar=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e498d5d7-4933-4fc0-ac7b-daa638ba25e1",
    "metadata": {},
    "outputs": [],
@@ -203,6 +214,16 @@
     "diff = np.squeeze(casa_residual_xds['SKY'].values) - np.squeeze(residual_image['SKY'].values)\n",
     "img3 = hv.Image(diff).opts(tools=['hover'], title='Difference residual image', \n",
     "                                        width=500, height=500, colorbar=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "033319b1-2c45-40dc-a99b-4927b592879d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img0"
    ]
   },
   {
