Update AstroVIPER to work with XRADIO v1.0.1.

--- a/docs/astroviper_tutorial_spectral_moment.ipynb
+++ b/docs/astroviper_tutorial_spectral_moment.ipynb
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "4aba9226-856e-40a8-8201-a1806e9daf77",
    "metadata": {},
    "outputs": [
@@ -921,8 +921,8 @@
     "\n",
     "from xradio.measurement_set import open_processing_set\n",
     "\n",
-    "intents = [\"OBSERVE_TARGET#ON_SOURCE\"]\n",
-    "ps = open_processing_set(ps_store, intents=intents)\n",
+    "scan_intents = [\"OBSERVE_TARGET#ON_SOURCE\"]\n",
+    "ps = open_processing_set(ps_store, scan_intents=scan_intents)\n",
     "ps.xr_ps.summary()"
    ]
   },
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d25df564-7d60-44d5-b1d3-0b254ec0848d",
    "metadata": {},
    "outputs": [
@@ -1014,8 +1014,8 @@
     "from IPython.display import HTML, display\n",
     "\n",
     "ps_store = \"Antennae_North.cal.lsrk.ps.zarr\"\n",
-    "intents = [\"OBSERVE_TARGET#ON_SOURCE\"]\n",
-    "ps = open_processing_set(ps_store, intents=intents)\n",
+    "scan_intents = [\"OBSERVE_TARGET#ON_SOURCE\"]\n",
+    "ps = open_processing_set(ps_store, scan_intents=scan_intents)\n",
     "\n",
     "grid_params = {}\n",
     "grid_params[\"chan_mode\"] = \"cube\"\n",
