--- a/docs/core_tutorials/imaging/msv4_spectral_frame_conversion_demo_comparison.ipynb
+++ b/docs/core_tutorials/imaging/msv4_spectral_frame_conversion_demo_comparison.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2d665e4e",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
       "Requirement already satisfied: astroviper in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (0.0.29)\n",
       "Requirement already satisfied: graphviper>=0.0.34 in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from astroviper) (0.0.35)\n",
       "Requirement already satisfied: numpy>=1.20.0 in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from astroviper) (2.2.6)\n",
-      "Requirement already satisfied: xradio>=0.0.58 in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from astroviper) (0.0.59)\n",
+      "Requirement already satisfied: xradio>=0.0.58 in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from astroviper) (0.0.60)\n",
       "Requirement already satisfied: astropy in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xradio>=0.0.58->astroviper) (7.1.0)\n",
       "Requirement already satisfied: toolviper>=0.0.12 in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xradio>=0.0.58->astroviper) (0.0.16)\n",
       "Requirement already satisfied: numba>=0.57.0 in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xradio>=0.0.58->astroviper) (0.61.2)\n",
@@ -41,7 +41,7 @@
       "Requirement already satisfied: scipy in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xradio>=0.0.58->astroviper) (1.15.3)\n",
       "Requirement already satisfied: xarray in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xradio>=0.0.58->astroviper) (2025.6.1)\n",
       "Requirement already satisfied: zarr<3,>=2 in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xradio>=0.0.58->astroviper) (2.18.7)\n",
-      "Requirement already satisfied: pyarrow in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xradio>=0.0.58->astroviper) (20.0.0)\n",
+      "Requirement already satisfied: pyarrow in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xradio>=0.0.58->astroviper) (21.0.0)\n",
       "Requirement already satisfied: typeguard in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xradio>=0.0.58->astroviper) (4.4.4)\n",
       "Requirement already satisfied: numcodecs<0.16 in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xradio>=0.0.58->astroviper) (0.15.1)\n",
       "Requirement already satisfied: psutil in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xradio>=0.0.58->astroviper) (7.0.0)\n",
@@ -99,7 +99,7 @@
       "Requirement already satisfied: pandas>=2.1 in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from xarray->xradio>=0.0.58->astroviper) (2.3.1)\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from pandas>=2.1->xarray->xradio>=0.0.58->astroviper) (2025.2)\n",
       "Requirement already satisfied: tzdata>=2022.7 in /Users/jsteeb/miniforge3/envs/zinc/lib/python3.13/site-packages (from pandas>=2.1->xarray->xradio>=0.0.58->astroviper) (2025.2)\n",
-      "Using xradio version 0.0.29\n"
+      "Using astroviper version 0.0.29\n"
      ]
     }
    ],
@@ -155,8 +155,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[38;2;128;05;128m2025-09-16 11:47:22,639\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Module path: \u001b[38;2;50;50;205m/Users/jsteeb/Dropbox/toolviper/src/toolviper\u001b[0m \n",
-      "[\u001b[38;2;128;05;128m2025-09-16 11:47:22,642\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
+      "[\u001b[38;2;128;05;128m2025-10-09 11:23:19,749\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Module path: \u001b[38;2;50;50;205m/Users/jsteeb/Dropbox/toolviper/src/toolviper\u001b[0m \n",
+      "[\u001b[38;2;128;05;128m2025-10-09 11:23:19,751\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
      ]
     },
     {
@@ -181,9 +181,16 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\u001b[38;2;128;05;128m2025-10-09 11:23:19,754\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m File exists: Antennae_fld1_topo.ps.zarr \n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04f3fc3be4ce466ea18b7bcad71e72cc",
+       "model_id": "41d9f9d55c804b488ec03c5b669c74cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,8 +215,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\u001b[38;2;128;05;128m2025-09-16 11:47:23,241\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Module path: \u001b[38;2;50;50;205m/Users/jsteeb/Dropbox/toolviper/src/toolviper\u001b[0m \n",
-      "[\u001b[38;2;128;05;128m2025-09-16 11:47:23,243\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
+      "[\u001b[38;2;128;05;128m2025-10-09 11:23:19,757\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Module path: \u001b[38;2;50;50;205m/Users/jsteeb/Dropbox/toolviper/src/toolviper\u001b[0m \n",
+      "[\u001b[38;2;128;05;128m2025-10-09 11:23:19,757\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m Downloading from [cloudflare] .... \n"
      ]
     },
     {
@@ -234,9 +241,16 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\u001b[38;2;128;05;128m2025-10-09 11:23:19,759\u001b[0m] \u001b[38;2;50;50;205m    INFO\u001b[0m\u001b[38;2;112;128;144m    viperlog: \u001b[0m File exists: Antennae_fld1_casa_lsrk.ps.zarr \n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b29092d71f84b1aaf90ea2af60ec237",
+       "model_id": "a817093f80e548bfbd867633c4bfd770",
        "version_major": 2,
        "version_minor": 0
       },
@@ -466,7 +480,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x318f04c20>"
+       "<matplotlib.legend.Legend at 0x3213c06e0>"
       ]
      },
      "execution_count": 9,
