--- a/docs/astroviper_tutorial_spectral_moment.ipynb
+++ b/docs/astroviper_tutorial_spectral_moment.ipynb
@@ -1055,8 +1055,7 @@
     "from graphviper.graph_tools.coordinate_utils import make_parallel_coord, make_frequency_coord\n",
     "from graphviper.graph_tools import map, reduce\n",
     "from astroviper.core.image_analysis.moment_max import moment_max\n",
-    "from astroviper.distributed.imaging.utils import make\n",
-    "_image_mosaic\n",
+    "from astroviper.distributed.imaging.utils import make_image_mosaic\n",
     "from toolviper.utils.display import dict_to_html\n",
     "from IPython.display import HTML, display\n",
     "\n",
