--- a/docs/tutorials/astroviper_fringefit_tutorial.ipynb
+++ b/docs/tutorials/astroviper_fringefit_tutorial.ipynb
@@ -8,13 +8,13 @@
    "outputs": [],
    "source": [
     "from xradio.measurement_set.open_processing_set import open_processing_set\n",
-    "from astroviper.calibration.fringefit import (fringefit_ps, apply_cal_ps)\n",
+    "from astroviper.calibration.fringefit import fringefit_ps, apply_cal_ps\n",
     "from xradio.measurement_set import convert_msv2_to_processing_set\n",
     "import toolviper\n",
     "\n",
     "import xarray as xa\n",
     "import astropy.time\n",
-    "import numpy as np \n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -25,20 +25,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "msv2_name = 'global_vlbi_gg084b_reduced.ms'\n",
+    "msv2_name = \"global_vlbi_gg084b_reduced.ms\"\n",
     "toolviper.utils.data.download(file=msv2_name)\n",
     "\n",
     "convert_out = \"gg084b\"\n",
-    "partition_scheme = ['FIELD_ID', 'SCAN_NUMBER', 'SPW']\n",
+    "partition_scheme = [\"FIELD_ID\", \"SCAN_NUMBER\", \"SPW\"]\n",
     "\n",
     "convert_msv2_to_processing_set(\n",
     "    in_file=msv2_name,\n",
     "    out_file=convert_out,\n",
     "    partition_scheme=partition_scheme,\n",
     "    overwrite=True,\n",
-    "    parallel_mode='partition'\n",
-    "    )\n",
+    "    parallel_mode=\"partition\",\n",
+    ")\n",
     "\n",
     "# This currently fails with a very long error message ending with\n",
     "# \"TypeError: Expected a BytesBytesCodec. Got <class 'numcodecs.zstd.Zstd'> instead.\""
@@ -54,9 +53,9 @@
     "# The conversion appends \".ps.zarr\" to the out_file it was given,\n",
     "# But currently the conversion doesn't output a valid .zarr dataset anyway\n",
     "\n",
-    "ps = open_processing_set('gg084b.ps.zarr') \n",
+    "ps = open_processing_set(\"gg084b.ps.zarr\")\n",
     "\n",
-    "s = ps.xr_ps.summary() # => Pandas table"
+    "s = ps.xr_ps.summary()  # => Pandas table"
    ]
   },
   {
@@ -66,36 +65,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ff_start = astropy.time.Time('2018-05-27 07:15:00', format='iso').unix\n",
+    "ff_start = astropy.time.Time(\"2018-05-27 07:15:00\", format=\"iso\").unix\n",
     "ff_interval = 90\n",
     "\n",
-    "ref_ant = 'MK'\n",
+    "ref_ant = \"MK\"\n",
     "\n",
     "cal_tree = fringefit_ps(ps, ref_ant, ff_start, ff_interval)\n",
     "ps2 = apply_cal_ps(ps, cal_tree, ff_start, ff_interval)\n",
     "\n",
-    "def bl_inds(xds, a1, a2):\n",
-    "    return ((xds.baseline_antenna1_name==a1) & (xds.baseline_antenna2_name==a2) |\n",
-    "            (xds.baseline_antenna1_name==a2) & (xds.baseline_antenna2_name==a1))\n",
-    " \n",
-    "# We need an xds to get baselines from; I happen to know this one contains the interval we chose above\n",
-    "xds = ps2['global_vlbi_gg084b_reduced_8']\n",
     "\n",
-    "ref_ant = 'MK'\n",
-    "target_ant = 'YY'\n",
+    "def bl_inds(xds, a1, a2):\n",
+    "    return (xds.baseline_antenna1_name == a1) & (xds.baseline_antenna2_name == a2) | (\n",
+    "        xds.baseline_antenna1_name == a2\n",
+    "    ) & (xds.baseline_antenna2_name == a1)\n",
+    "\n",
+    "\n",
+    "# We need an xds to get baselines from; I happen to know this one contains the interval we chose above\n",
+    "xds = ps2[\"global_vlbi_gg084b_reduced_8\"]\n",
+    "\n",
+    "ref_ant = \"MK\"\n",
+    "target_ant = \"YY\"\n",
     "[fdmk_index] = xds.baseline_id[bl_inds(xds, ref_ant, target_ant)].values\n",
     "ant1 = xds.baseline_antenna1_name[fdmk_index].values\n",
     "ant2 = xds.baseline_antenna2_name[fdmk_index].values\n",
-    "vis0 = np.angle(np.mean(xds['VISIBILITY'][:,fdmk_index, :, 0].squeeze(), axis=0))\n",
-    "vis1 = np.angle(np.mean(xds['VISIBILITY_CORRECTED'][:,fdmk_index, :, 0].squeeze(), axis=0))\n",
+    "vis0 = np.angle(np.mean(xds[\"VISIBILITY\"][:, fdmk_index, :, 0].squeeze(), axis=0))\n",
+    "vis1 = np.angle(\n",
+    "    np.mean(xds[\"VISIBILITY_CORRECTED\"][:, fdmk_index, :, 0].squeeze(), axis=0)\n",
+    ")\n",
     "plt.figure()\n",
-    "plt.scatter(xds.frequency, vis0, label='Raw')\n",
-    "plt.scatter(xds.frequency, vis1, label='Corrected')\n",
+    "plt.scatter(xds.frequency, vis0, label=\"Raw\")\n",
+    "plt.scatter(xds.frequency, vis1, label=\"Corrected\")\n",
     "plt.title(f\"Baseline {ant1}-{ant2}\")\n",
     "plt.xlabel(\"Frequency (Hz)\")\n",
     "plt.ylabel(\"Phase (radians)\")\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
